@@ -62,6 +62,45 @@ AH_VERBATIM([OBCONV],
 #endif
 ])
 
+AH_VERBATIM([OBERROR], 
+[/* Used to export symbols for DLL / shared library builds */
+#if defined(WIN32)
+ #if defined(USING_OBDLL) // e.g. in src/main.cpp
+  #define OBERROR __declspec(dllimport)
+ #else
+  #define OBERROR __declspec(dllexport)
+ #endif
+#else //Everything else (behaviour as original)
+ #define OBERROR 
+#endif
+])
+
+AH_VERBATIM([OBFPTR], 
+[/* Used to export symbols for DLL / shared library builds */
+#if defined(WIN32)
+ #if defined(USING_OBDLL) // e.g. in src/main.cpp
+  #define OBFPTR __declspec(dllimport)
+ #else
+  #define OBFPTR __declspec(dllexport)
+ #endif
+#else //Everything else (behaviour as original)
+ #define OBFPTR 
+#endif
+])
+
+AH_VERBATIM([OBCOMMON], 
+[/* Used to export symbols for DLL / shared library builds */
+#if defined(WIN32)
+ #if defined(USING_OBDLL) // e.g. in src/main.cpp
+  #define OBCOMMON __declspec(dllimport)
+ #else
+  #define OBCOMMON __declspec(dllexport)
+ #endif
+#else //Everything else (behaviour as original)
+ #define OBCOMMON 
+#endif
+])
+
 dnl Checks for programs.
 AC_PROG_CC
 AC_PROG_CXX
